# rust-flight-controller

./: .gitignore  Cargo.toml  Embed.toml  imu.rs  memory.x
.cargo/: config.toml
src/: filter.rs  imu.rs  main.rs  main_move.rs  main_old.rs  usb-communication.rs  usb.rs
