[package]
name = "rust-flight-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"
stm32g4xx-hal = { git = "https://github.com/stm32-rs/stm32g4xx-hal.git", branch= "main", features = ["stm32g431"]}
rtt-target = "0.6.1"
libm = "0.2.11"
defmt = "0.3.10"
defmt-rtt = "0.4.1"



[profile.release]
debug = 2
codegen-units = 1 
lto = "fat"
opt-level = "z"

